# plutarch-template-plutonomicon

./: LICENSE  README.md  cabal.project  flake.nix  plutarch-template.cabal
app/: Main.hs
nix/: hercules-ci.nix
